bk_ida/gccida/g0/std_expand_builtin_va_start
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_start/src/builtins.c:3399:5: error: expected ';' after expression
tree t; // [rsp+28h] [rbp-18h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_start/src/builtins.c:3399:6: error: use of undeclared identifier 't'
tree t; // [rsp+28h] [rbp-18h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_start/src/builtins.c:3418:26: error: invalid operands to binary expression ('tree' (aka 'union tree_node *') and 'tree (*)[51]')
tree = make_tree( ( tree)*( &global_trees + 28), nextarga); 
                  ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_start/src/builtins.c:3419:1: error: use of undeclared identifier 't'
t = build( MODIFY_EXPR, valist->common.type, valist, tree); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_start/src/builtins.c:3420:15: error: use of undeclared identifier 't'
*( ( _BYTE *)&t->block.common + 17) |= 1u; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_start/src/builtins.c:3421:14: error: use of undeclared identifier 't'
expand_expr( t, const_int_rtx[64], VOIDmode, EXPAND_NORMAL); 
             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_start/src/obj/builtins.o] Error 1
